header and popular section finised

--- a/index.html
+++ b/index.html
@@ -5,6 +5,114 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>RF Travel</title>
     <link rel="stylesheet" href="styles/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav>
+        <h2>RF <span id="text-travel">Travel</span></h2>
+        <ul>
+          <li>
+            <a href=""> <span id="text-home">Home</span></a>
+          </li>
+          <li><a href="">Package</a></li>
+          <li><a href="">Testimonial</a></li>
+          <li><a href="">Blog</a></li>
+          <li><a href="">Contact</a></li>
+        </ul>
+      </nav>
+
+      <div class="banner">
+        <div class="banner-content">
+          <h1>Explore Your Travel</h1>
+          <p>
+            Dolor sit amet consectetur. Nullam suspendisse vitae ultricies dolor
+            adipiscing. In et odio enim ac quis sapien urna eu phasellus.
+          </p>
+          <div class="input-portion">
+            <input type="text" placeholder="Where go" />
+            <input type="text" placeholder="When" />
+            <input type="text" placeholder="Slect Type" />
+            <button id="find-now-btn" class="btn-primary">Find Now</button>
+          </div>
+        </div>
+      </div>
+    </header>
+    <main>
+      <!-- popular-tours start -->
+      <section class="popular-tours">
+        <div class="popular-tours-content">
+          <h2>Our Popular Tours</h2>
+          <p>
+            Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra
+            odio sit massa. Sodales dictumst nec nibh pellentesque.
+          </p>
+          <ul>
+            <li>
+              Tempus euismod lacus mauris dignissim quis in ultrices. Magna
+              nullam odio neque diam. Sociis erat at .
+            </li>
+            <li>
+              Adipiscing ornare pellentesque mauris volutpat tortor vitae platea
+              porta lacus. Lectus suspendisse nullam.
+            </li>
+            <li>
+              Accumsan eget et turpis praesent lorem egestas enim elit bibendum.
+              Risus at in.
+            </li>
+          </ul>
+          <p>
+            Amet consectetur. Vulputate commodo felis molestie risus ornare
+            nulla amet et. Libero commodo sagittis dignissim adipiscing quis.
+            Habitant adipiscing risus natoque aliquet. Id bibendum nunc senectus
+            semper tincidunt.
+          </p>
+          <button class="btn-primary">Read More</button>
+        </div>
+        <div class="popular-tours-img">
+          <img src="Images/Rectangle 4.png" alt="" />
+        </div>
+      </section>
+      <!-- destination start -->
+      <section class="destination-container">
+        <div class="destination-content">
+          <h2>Choose Your Destination</h2>
+          <p>
+            Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra
+            odio sit massa. Sodales dictumst nec nibh pellentesque.
+          </p>
+        </div>
+        <div class="destination-img-container">
+          <!-- .box-$*7>h3 -->
+          <div class="box-1">
+            <h3>Maldives</h3>
+          </div>
+          <div class="box-2">
+            <h3>Indonesia</h3>
+          </div>
+          <div class="box-3">
+            <h3>Srilanka</h3>
+          </div>
+          <div class="box-4">
+            <h3>North America</h3>
+          </div>
+          <div class="box-5">
+            <h3>Kashmir</h3>
+          </div>
+          <div class="box-6">
+            <h3>Bangladesh</h3>
+          </div>
+          <div class="box-7">
+            <h3>Bandarban</h3>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer></footer>
+  </body>
 </html>
