destination section finished

--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
             <input type="text" placeholder="Where go" />
             <input type="text" placeholder="When" />
             <input type="text" placeholder="Slect Type" />
-            <button id="find-now-btn" class="btn-primary">Find Now</button>
+            <button id="find-now-btn" class="btn-primary">
+              <img src="/Images/search-icon.svg" alt="" /> <span>Find Now</span>
+            </button>
           </div>
         </div>
       </div>
@@ -89,26 +91,34 @@
         </div>
         <div class="destination-img-container">
           <!-- .box-$*7>h3 -->
-          <div class="box-1">
-            <h3>Maldives</h3>
+          <div class="row-1">
+            <div class="box-1">
+              <h3>Maldives</h3>
+              <!-- <img src="Images/Rectangle 5.png" alt="" /> -->
+            </div>
+            <div class="box-2">
+              <h3>Indonesia</h3>
+              <!-- <img src="Images/Rectangle 8.png" alt="" /> -->
+            </div>
           </div>
-          <div class="box-2">
-            <h3>Indonesia</h3>
+          <div class="row-2">
+            <div class="box-3">
+              <h3>Srilanka</h3>
+            </div>
+            <div class="box-4">
+              <h3>North America</h3>
+            </div>
+            <div class="box-5">
+              <h3>Kashmir</h3>
+            </div>
           </div>
-          <div class="box-3">
-            <h3>Srilanka</h3>
-          </div>
-          <div class="box-4">
-            <h3>North America</h3>
-          </div>
-          <div class="box-5">
-            <h3>Kashmir</h3>
-          </div>
-          <div class="box-6">
-            <h3>Bangladesh</h3>
-          </div>
-          <div class="box-7">
-            <h3>Bandarban</h3>
+          <div class="row-3">
+            <div class="box-6">
+              <h3>Bangladesh</h3>
+            </div>
+            <div class="box-7">
+              <h3>Bandarban</h3>
+            </div>
           </div>
         </div>
       </section>
