--- a/index.html
+++ b/index.html
@@ -11,11 +11,19 @@
       href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    />
   </head>
   <body>
     <header>
       <nav>
-        <h2>RF <span id="text-travel">Travel</span></h2>
+        <div class="logo">
+          <img src="Images/Group 40071 (2).png" alt="" />
+          <h2>RF <span id="text-travel">Travel</span></h2>
+        </div>
+        <i class="fa-solid fa-bars"></i>
         <ul>
           <li>
             <a href=""> <span id="text-home">Home</span></a>
@@ -36,8 +44,12 @@
           </p>
           <div class="input-portion">
             <input type="text" placeholder="Where go" />
-            <input type="text" placeholder="When" />
-            <input type="text" placeholder="Slect Type" />
+            <select name="" id="">
+              <option value="When">When</option>
+            </select>
+            <select name="" id="">
+              <option value="Slect Type">Slect Type</option>
+            </select>
             <button id="find-now-btn" class="btn-primary">
               <img src="/Images/search-icon.svg" alt="" /> <span>Find Now</span>
             </button>
@@ -94,11 +106,9 @@
           <div class="row-1">
             <div class="box-1">
               <h3>Maldives</h3>
-              <!-- <img src="Images/Rectangle 5.png" alt="" /> -->
             </div>
             <div class="box-2">
               <h3>Indonesia</h3>
-              <!-- <img src="Images/Rectangle 8.png" alt="" /> -->
             </div>
           </div>
           <div class="row-2">
@@ -118,6 +128,49 @@
             </div>
             <div class="box-7">
               <h3>Bandarban</h3>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- why choose section start -->
+      <section class="why-choose">
+        <div class="why-choose-content">
+          <h2>Why Choose Us</h2>
+          <p>
+            Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra
+            odio sit massa. Sodales dictumst nec nibh pellentesque.
+          </p>
+        </div>
+        <div class="card-container">
+          <div class="card-row-1">
+            <div class="card-1">
+              <img src="Images/hotel 1.svg" alt="" />
+              <h3>Handpicked Hotels</h3>
+              <p>
+                Amet consectetur. Vulputate commodo felis molestie risus ornare
+                nulla amet et. Libero commodo sagittis dignissim adipiscing
+                quis. Habitant adipiscing risus natoque aliquet.
+              </p>
+            </div>
+            <div class="card-2">
+              <img src="/Images/map 1.svg" alt="" />
+              <h3>World Class Service</h3>
+              <p>
+                Amet consectetur. Vulputate commodo felis molestie risus ornare
+                nulla amet et. Libero commodo sagittis dignissim adipiscing
+                quis. Habitant adipiscing risus natoque aliquet.
+              </p>
+            </div>
+          </div>
+          <div class="card-row-2">
+            <div class="card-3">
+              <img src="/Images/price-tag 1.svg" alt="" />
+              <h3>Best Price Guarantee</h3>
+              <p>
+                Amet consectetur. Vulputate commodo felis molestie risus ornare
+                nulla amet et. Libero commodo sagittis dignissim adipiscing
+                quis. Habitant adipiscing risus natoque aliquet.
+              </p>
             </div>
           </div>
         </div>
