--- a/index.html
+++ b/index.html
@@ -175,6 +175,27 @@
           </div>
         </div>
       </section>
+      <!-- newsletter section start -->
+      <section class="newsletter">
+        <!-- .newsletter-form>h3+p+hr+input*2+btn+.newsletter-img>img+.voucher -->
+        <div class="newsletter-form">
+          <h3>Newsletter</h3>
+          <p>Get your daily dose of travel news & tips. Sign up today!</p>
+          <hr />
+          <div class="news-form-potion">
+            <input type="text" placeholder="Enter your name" name="" id="" />
+            <input type="email" placeholder="Enter your email" name="" id="" />
+            <button class="btn-primary">Subscribe</button>
+          </div>
+        </div>
+        <div class="newsletter-img">
+          <img src="Images/Rectangle 8 (1).png" alt="" />
+          <div class="voucher">
+            <p>Travel.com</p>
+            <h2>Save up to 70%</h2>
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
