--- a/index.html
+++ b/index.html
@@ -197,6 +197,34 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="footer-content">
+        <div class="footer-logo">
+          <img src="Images/Group 40071 (2).png" alt="" />
+          <h2>RF <span id="text-travel">Travel</span></h2>
+        </div>
+        <p class="footer-text">
+          Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae
+          blandit orci potenti vulputate. Leo erat maecenas vitae elementum
+          ultricies nullam.
+        </p>
+        <ul>
+          <li>
+            <a href=""><i class="fa-brands fa-twitter"></i> </a>
+          </li>
+          <li>
+            <a href=""><i class="fa-brands fa-facebook-f"></i></a>
+          </li>
+          <li>
+            <a href=""><i class="fa-brands fa-instagram"></i></a>
+          </li>
+          <li>
+            <a href=""><i class="fa-brands fa-github"></i></a>
+          </li>
+        </ul>
+        <hr />
+        <p class="copyright-text">2017, All Rights Reserved.</p>
+      </div>
+    </footer>
   </body>
 </html>
