--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
           </li>
         </ul>
         <hr />
-        <p class="copyright-text">2017, All Rights Reserved.</p>
+        <p class="copyright-text">&copy; 2017, All Rights Reserved.</p>
       </div>
     </footer>
   </body>
